UseCompressedOops test crash with assertion failure

XMLWordPrintable

    • gc
    • b14
    • generic
    • linux

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/zgu/jdk-jdk/src/hotspot/share/oops/compressedOops.cpp:83), pid=40404, tid=40405
      # assert((intptr_t)base() <= (intptr_t)(_heap_address_range.start() - os::vm_page_size()) || base() == __null) failed: invalid value
      #
      # JRE version: (14.0) (fastdebug build )
      # Java VM: OpenJDK 64-Bit Server VM (fastdebug 14-internal+0-adhoc.zgu.jdk-jdk, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0x7de05c] CompressedOops::initialize(ReservedHeapSpace const&)+0x2e4
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e %P %I %h" (or dumping to /home/zgu/jdk-jdk/build/linux-aarch64-server-fastdebug/test-support/jtreg_test_hotspot_jtreg_hotspot_gc_shenandoah/scratch/1/core.40404)
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -Xlog:gc+heap+coops=trace -Xms32m -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:+UseCompressedOops -Xmx32m -XX:HeapBaseMinAddress=32g

      Host: merino.lab2.eng.bos.redhat.com, AArch64, 46 cores, 95G, Red Hat Enterprise Linux Server release 7.6 (Maipo)
      Time: Fri Sep 6 18:10:40 2019 EDT elapsed time: 0 seconds (0d 0h 0m 0s)

      --------------- T H R E A D ---------------

      Current thread (0x000040003c061800): JavaThread "Unknown thread" [_thread_in_vm, id=40405, stack(0x000040003acb0000,0x000040003aeb0000)]

      Stack: [0x000040003acb0000,0x000040003aeb0000], sp=0x000040003aeade50, free space=2039k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x7de05c] CompressedOops::initialize(ReservedHeapSpace const&)+0x2e4
      V [libjvm.so+0x14c7aac] Universe::reserve_heap(unsigned long, unsigned long)+0x17c
      V [libjvm.so+0x12f4fb0] ShenandoahHeap::initialize()+0x12c
      V [libjvm.so+0x14c75f4] Universe::initialize_heap()+0x78
      V [libjvm.so+0x14c76e4] universe_init()+0xac
      V [libjvm.so+0xb243a8] init_globals()+0x60
      V [libjvm.so+0x148c194] Threads::create_vm(JavaVMInitArgs*, bool*)+0x2fc
      V [libjvm.so+0xc60148] JNI_CreateJavaVM+0xc8
      C [libjli.so+0x4338] JavaMain+0x88
      C [libjli.so+0x7cf4] ThreadJavaMain+0xc
      C [libpthread.so.0+0x7c48] start_thread+0xb4

            Assignee:
            Zhengyu Gu
            Reporter:
            Zhengyu Gu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: