8230730: UseCompressedOops test crash with assertion failure

Reviewed-by: stefank, eosterlund